docker/src/ui/draw_blocks/snapshots/gnostr_mcp_agent__ui__draw_blocks__tests__draw_blocks_whole_layout_error.snap
---
source: src/ui/draw_blocks/mod.rs
expression: setup.terminal.backend()
---
"    name          state       status      cpu      memory/limit          id         image     ↓ rx      ↑ tx                                  ( h ) show help   "
"╭ Containers 1/3 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮╭──────────────╮"
"│⚪ container_1   ✓ running   Up 1 hour   03.00%   30.00 kB / 30.00 kB          1   image_1   0.00 kB   0.00 kB                                ││▶ pause       │" Hidden by multi-width symbols: [(2, " ")]
"│   container_2   ✓ running   Up 2 hour   00.00%    0.00 kB /  0.00 kB          2   image_2   0.00 kB   0.00 kB                                ││  restart     │"
"│   container_3   ✓ running   Up 3 hour   00.00%    0.00 kB /  0.00 kB          3   image_3   0.00 kB   0.00 kB                                ││  stop        │"
"│                                                                                                                                              ││  delete      │"
"│                                                                                                                                              ││              │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯╰──────────────╯"
"╭ Logs 3/3 - container_1 - image_1 ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│  line 1                                                                                                                                                      │"
"│  line 2                                                                                                                                                      │"
"│▶ line 3                                                                                                                                                      │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                              ╭──────────── Error ─────────────╮                                                              │"
"│                                                              │                                │                                                              │"
"│                                                              │    Unable to pause container   │                                                              │"
"│                                                              │                                │                                                              │"
"│                                                              │        ( c ) clear error       │                                                              │"
"│                                                              │                                │                                                              │"
"│                                                              │        ( q ) quit oxker        │                                                              │"
"│                                                              │                                │                                                              │"
"│                                                              │                                │                                                              │"
"│                                                              ╰────────────────────────────────╯                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭────────────── cpu 03.00% ───────────────╮╭──────────── memory 30.00 kB ────────────╮╭────── rx: 0.00 kb/s tx: 0.00 kb/s ──────╮ ╭────────── ports ───────────╮"
"│10.00%│     •                            ││100.00 kB│     •                         ││         │•••••••                        │ │       ip   private   public│"
"│      │    ••                            ││         │    ••                         ││         │    ••                         │ │               8001         │"
"│      │   • •                            ││         │   • •                         ││         │    ••                         │ │127.0.0.1      8003     8003│"
"│      │   • •                            ││         │   • •                         ││0.00 kb/s│    ••                         │ │                            │"
"│      │  •   •                           ││         │  •  •                         ││         │     •                         │ │                            │"
"│      │ •    ••                          ││         │ •   ••                        ││0.00 kb/s│     •                         │ │                            │"
"│      │••    •                           ││         │••   ••                        ││         │     •                         │ │                            │"
"│      │                                  ││         │                               ││         │     •                         │ │                            │"
"╰─────────────────────────────────────────╯╰─────────────────────────────────────────╯╰─────────────────────────────────────────╯ ╰────────────────────────────╯"
